--- a/src/app/components/add-coin/add-coin.component.html
+++ b/src/app/components/add-coin/add-coin.component.html
@@ -1,4 +1,4 @@
-<div style="padding-top: 3rem;">
+<main>
   <div style="display: flex; justify-content: center; align-items: center;">
     <form (submit)="handleSubmit(); addCoin.reset();" #addCoin="ngForm">
       <div class="form-group">
@@ -36,4 +36,4 @@
 
   </div>
 
-</div>
+</main>
