--- a/src/app/portfolio-page/portfolio-page.component.html
+++ b/src/app/portfolio-page/portfolio-page.component.html
@@ -1,37 +1,34 @@
-<div class="container-fluid" style="margin-top: 3vh;">
-
-  <div class="row">
-    <div class="col-sm-6">
-      <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a routerLink="/portfolio/details" routerLinkActive="active" class="nav-link">Details</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/portfolio/add" routerLinkActive="active" class="nav-link">Add Coin</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/portfolio/edit" class="nav-link" routerLinkActive="active">Edit
-            Portfolio</a>
-        </li>
-      </ul>
-    </div>
-    <div class="col-sm-6">
-      <div class="btn-group">
-        <button
-          class="btn btn-info"
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a routerLink="/portfolio/details" routerLinkActive="active" class="nav-link">Details</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/portfolio/add" routerLinkActive="active" class="nav-link">Add Coin</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/portfolio/edit" class="nav-link" routerLinkActive="active">Edit
+          Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
           (click)="csvDownloadService.handleDownload()">Download
-        </button>
-        <button
-          class="btn btn-danger"
+        </a>
+
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
           (click)="localStorageService.deleteCoins()"
-
         >Delete Portfolio
-        </button>
+        </a>
 
-      </div>
-    </div>
+      </li>
+    </ul>
+
   </div>
   <router-outlet></router-outlet>
-
 
 </div>
