add large number pipe

--- a/src/app/components/add-coin/add-coin.component.html
+++ b/src/app/components/add-coin/add-coin.component.html
@@ -28,7 +28,7 @@
         >
       </div>
       <button
-        [disabled]="!addCoin.form.valid"
+        [disabled]="addCoin.form.invalid"
         type="submit" class="btn btn-primary">Save!
       </button>
     </form>
