--- a/src/app/components/edit-portfolio/edit-portfolio.component.html
+++ b/src/app/components/edit-portfolio/edit-portfolio.component.html
@@ -1,50 +1,56 @@
 <main>
-  <table
-    id="editPortfolio"
-    class="table table-responsive table-striped table-hover">
-    <caption>Edit Portfolio</caption>
-    <thead>
-    <tr>
-      <th>name</th>
-      <th class="text-right">hodl</th>
-      <th></th>
-    </tr>
-    </thead>
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <table
+        id="editPortfolio"
+        class="table table-hover">
+        <caption>Edit Portfolio</caption>
+        <thead>
+        <tr>
+          <th>name</th>
+          <th class="text-right">hodl</th>
+          <th></th>
+        </tr>
+        </thead>
 
-    <tbody>
-    <tr *ngFor="let coin of portfolioService.getCoins()">
+        <tbody>
+        <tr *ngFor="let coin of portfolioService._raw">
 
-      <td
+          <td
 
-      >{{coin[0]}}
-      </td>
-      <td class="text-right">
-        <form
-          *ngIf="editMode"
-          (submit)="portfolioService.editCoin(coin[0], coinAge.value); editMode = false;">
-          <input
-            #coinAge
-            value="{{coin[1]}}"
-            class="form-control-inline"
-          >
-          <button class="btn btn-sm btn-primary" type="submit">save!</button>
-        </form>
+          >{{coin[0]}}
+          </td>
+          <td class="text-right">
+            <form
+              *ngIf="editMode"
+              (submit)="portfolioService.editCoin(coin[0], coinAge.value); editMode = false;">
+              <input
+                #coinAge
+                value="{{coin[1]}}"
+                class="form-control-inline"
+              >
+              <button class="btn btn-sm btn-primary" type="submit">save!</button>
+            </form>
 
-        <span *ngIf="!editMode" (click)="editMode = !editMode" style="cursor: pointer;">
+            <span *ngIf="!editMode" (click)="editMode = !editMode" style="cursor: pointer;">
               {{coin[1] | number}}
             </span>
-      </td>
+          </td>
 
-      <td>
-        <button class="btn btn-sm btn-danger" (click)="portfolioService.deleteCoin(coin[0])">
-          Delete
-        </button>
-      </td>
+          <td class="text-right">
+            <button class="btn btn-sm btn-danger" (click)="portfolioService.deleteCoin(coin[0])">
+              Delete
+            </button>
+          </td>
 
-    </tr>
-    </tbody>
-    <tfoot>
+        </tr>
+        </tbody>
+        <tfoot>
 
-    </tfoot>
-  </table>
+        </tfoot>
+
+      </table>
+    </div>
+  </div>
+
 </main>
