--- a/src/app/components/portfolio-table/portfolio-table.component.css
+++ b/src/app/components/portfolio-table/portfolio-table.component.css
@@ -4,3 +4,10 @@
   align-items: center;
   font-size: 1.3rem;
 }
+
+.rank {
+  display: inline;
+  width: 40px;
+  text-align: right;
+  padding-right: 10px;
+}
