--- a/src/app/pages/portfolio-page/portfolio-page.component.html
+++ b/src/app/pages/portfolio-page/portfolio-page.component.html
@@ -1,7 +1,5 @@
 <div class="container-fluid">
-  <router-outlet></router-outlet>
-
-  <nav class="fixed-bottom">
+  <nav class="">
     <ul class="nav">
 
       <li class="nav-item">
@@ -22,4 +20,5 @@
 
     </ul>
   </nav>
+  <router-outlet></router-outlet>
 </div>
