--- a/src/app/components/portfolio-table/portfolio-table.component.html
+++ b/src/app/components/portfolio-table/portfolio-table.component.html
@@ -37,9 +37,9 @@
                 name="currentTimeFrame"
                 class="form-control-sm"
               >
-                <option value="1">1 hr %</option>
-                <option value="24">24 hr %</option>
-                <option value="7">7 d %</option>
+                <option value="1h">1 hr %</option>
+                <option value="24h">24 hr %</option>
+                <option value="7d">7 d %</option>
               </select>
             </form>
           </th>
@@ -68,10 +68,12 @@
           </td>
           <td class="text-right">{{coin.market_cap_usd | lgNumPipe }}</td>
           <td class="text-right">{{coin.volume_usd_24 | lgNumPipe }}</td>
-          <td class="text-right">
+          <td class="text-right"
+          [class.text-danger]="coin['percent_change_' + input.currentTimeFrame] < 0"
+          [class.text-success]="0 <= coin['percent_change_' + input.currentTimeFrame]"
+          >
 
-            {{input.currentTimeFrame === '24' ? coin.percent_change_24h : input.currentTimeFrame
-            === '1' ? coin.percent_change_1h : coin.percent_change_7d | number }}
+            {{coin['percent_change_' + input.currentTimeFrame] | number }} %
           </td>
         </tr>
 
