--- a/src/app/components/edit-portfolio/edit-portfolio.component.html
+++ b/src/app/components/edit-portfolio/edit-portfolio.component.html
@@ -14,7 +14,7 @@
         </thead>
 
         <tbody>
-        <tr *ngFor="let coin of portfolioService._raw">
+        <tr *ngFor="let coin of portfolioService.portfolio">
 
           <td
 
