--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -12,16 +12,13 @@
 
 
       <li class="nav-item">
-        <a routerLink="/portfolio/details" routerLinkActive="active" class="nav-link">Portfolio</a>
+        <a routerLink="/portfolio/details" routerLinkActive="active" class="nav-link">
+          <i class="fas fa-clipboard-list"></i>
+          Portfolio</a>
       </li>
-      <li class="nav-item">
-        <a routerLink="/portfolio/add" routerLinkActive="active" class="nav-link">Add Coin</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="/portfolio/edit" class="nav-link" routerLinkActive="active">
-          Edit Portfolio</a>
-      </li>
-      <li class="nav-item"><a routerLink="/market" class="nav-link" routerLinkActive="active">Market</a></li>
+      <li class="nav-item"><a routerLink="/market" class="nav-link" routerLinkActive="active">
+        <i class="fas fa-chart-line"></i>
+        Market</a></li>
     </ul>
   </div>
 </nav>
