--- a/src/app/components/portfolio-summary/portfolio-summary.component.html
+++ b/src/app/components/portfolio-summary/portfolio-summary.component.html
@@ -1,9 +1,8 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <app-portfolio-table></app-portfolio-table>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <app-pie-chart></app-pie-chart>
     </div>
-
 </div>
