--- a/src/app/pages/portfolio-page/portfolio-page.component.html
+++ b/src/app/pages/portfolio-page/portfolio-page.component.html
@@ -3,9 +3,23 @@
     <ul class="nav">
 
       <li class="nav-item">
+        <a routerLink="/portfolio/add" routerLinkActive="active" class="nav-link">
+          <i class="fas fa-plus"></i>
+          Add Coin</a>
+      </li>
+
+      <li class="nav-item">
+        <a routerLink="/portfolio/edit" class="nav-link" routerLinkActive="active">
+          <i class="fas fa-minus"></i>
+          Edit Portfolio</a>
+      </li>
+
+      <li class="nav-item">
         <a
           class="btn btn-outline-primary"
-          (click)="csvDownloadService.handleDownload()">Download
+          (click)="csvDownloadService.handleDownload()">
+          <i class="fas fa-download"></i>
+          Download
         </a>
 
       </li>
@@ -13,7 +27,9 @@
         <a
           class="btn btn-outline-danger"
           (click)="portfolioService.deleteCoins()"
-        >Delete Portfolio
+        >
+          <i class="fas fa-trash"></i>
+          Delete Portfolio
         </a>
 
       </li>
