--- a/src/app/components/portfolio-table/portfolio-table.component.html
+++ b/src/app/components/portfolio-table/portfolio-table.component.html
@@ -39,7 +39,12 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor=" let coin of data | async">
+  <tr *ngIf="!data.length">
+    <td colspan="5">
+      No items...
+    </td>
+  </tr>
+  <tr *ngFor="let coin of data">
     <td class="text-left">
       <a
         [style.color]="portfolioService.colors[coin.symbol.toLowerCase()]"
@@ -72,7 +77,7 @@
 
 
   </tbody>
-  <tfoot style="font-size: large">
+  <tfoot *ngIf="data.length" style="font-size: large">
   <tr>
     <td><b>
       Equivalent Value:
@@ -95,3 +100,4 @@
   </tr>
   </tfoot>
 </table>
+
