--- a/src/app/components/portfolio-summary/portfolio-summary.component.html
+++ b/src/app/components/portfolio-summary/portfolio-summary.component.html
@@ -1,8 +1,9 @@
-<div class="row">
-    <div class="col-lg-6">
-        <app-portfolio-table></app-portfolio-table>
-    </div>
-    <div class="col-lg-6">
-        <app-pie-chart></app-pie-chart>
-    </div>
+<div class="row py-3">
+  <div class="col-sm-8">
+    <app-portfolio-table></app-portfolio-table>
+  </div>
+  <div class="col-sm-4">
+    <app-pie-chart></app-pie-chart>
+  </div>
+
 </div>
