--- a/src/app/components/market-page/market-page.component.html
+++ b/src/app/components/market-page/market-page.component.html
@@ -1,9 +1,15 @@
-<div class="row">
-    <div class="col-lg-6">
+<main class="bg-light">
+  <div class="container-fluid">
+    <div class="row py-3">
+      <div class="col-md-8 offset-md-2">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Market Data</h5>
+            <app-market-table></app-market-table>
+          </div>
+        </div>
+      </div>
+    </div>
 
-        <app-market-table></app-market-table>
-    </div>
-    <div class="col-lg-6">
-        <app-graph></app-graph>
-    </div>
-</div>
+  </div>
+</main>
