--- a/src/app/components/market-table/market-table.component.html
+++ b/src/app/components/market-table/market-table.component.html
@@ -1,72 +1,69 @@
-<main class="container">
-  <table class="table table-responsive">
-    <caption>Market</caption>
-    <thead>
-    <tr>
-      <th
-        (click)="handleNewSort('rank')"
-        class="text-capitalize text-left"
-      >
-        name
-      </th>
-      <th class="text-right"
-          (click)="handleNewSort('price_usd')"
-      >Price (USD)
-      </th>
+<table class="table">
+  <thead>
+  <tr>
+    <th
+      (click)="handleNewSort('rank')"
+      class="text-capitalize text-left"
+    >
+      name
+    </th>
+    <th class="text-right"
+        (click)="handleNewSort('price_usd')"
+    >Price (USD)
+    </th>
 
-      <th class="text-right"
-          (click)="handleNewSort('volume_usd_24')"
-      >Volume
-      </th>
-      <th class="text-right"
-      >
-        <form>
-          <select
-            title="timeframe"
-            (change)="setTimeFrame(input.currentTimeFrame)"
-            type="number"
-            id="currentTimeFrame"
-            [(ngModel)]="input.currentTimeFrame"
-            #currentTimeFrame="ngModel"
-            name="currentTimeFrame"
-            class="form-control-sm"
-          >
-            <option value="1h">1 hr %</option>
-            <option value="24h">24 hr %</option>
-            <option value="7d">7 d %</option>
-          </select>
-        </form>
-        <div (click)="handleNewSort('percent_change_' + input.currentTimeFrame)">
-          sort
-        </div>
-      </th>
+    <th class="text-right"
+        (click)="handleNewSort('volume_usd_24')"
+    >Volume
+    </th>
+    <th class="text-right"
+    >
+      <form>
+        <select
+          title="timeframe"
+          (change)="setTimeFrame(input.currentTimeFrame)"
+          type="number"
+          id="currentTimeFrame"
+          [(ngModel)]="input.currentTimeFrame"
+          #currentTimeFrame="ngModel"
+          name="currentTimeFrame"
+          class="form-control-sm"
+        >
+          <option value="1h">1 hr %</option>
+          <option value="24h">24 hr %</option>
+          <option value="7d">7 d %</option>
+        </select>
+      </form>
+      <div (click)="handleNewSort('percent_change_' + input.currentTimeFrame)">
+        sort
+      </div>
+    </th>
 
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let coin of data$ | async">
-      <td>
-        <a
-          [style.color]="portfolioService.colors[coin.symbol.toLowerCase()]"
-          href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
-          {{coin.rank}}
-          {{' '}}
-          <span
-            [class]="'icon icon-' + coin.symbol.toLowerCase()"></span>
-          {{coin.id}}
-          <small>
-            [{{coin.symbol | uppercase}}]
-          </small>
-        </a>
-      </td>
-      <td class="text-right">{{coin.price_usd | currency}}</td>
-      <td class="text-right">{{coin.volume_usd_24 | lgNumPipe}}</td>
-      <td class="text-right"
-          [class.text-danger]="coin['percent_change_' + input.currentTimeFrame] < 0"
-          [class.text-success]="0 <= coin['percent_change_' + input.currentTimeFrame]"
-      >{{coin['percent_change_' + input.currentTimeFrame] | number}} %
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</main>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let coin of data$ | async">
+    <td>
+      <a
+        [style.color]="portfolioService.colors[coin.symbol.toLowerCase()]"
+        href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
+        {{coin.rank}}
+        {{' '}}
+        <span
+          [class]="'icon icon-' + coin.symbol.toLowerCase()"></span>
+        {{coin.id}}
+        <small>
+          [{{coin.symbol | uppercase}}]
+        </small>
+      </a>
+    </td>
+    <td class="text-right">{{coin.price_usd | currency}}</td>
+    <td class="text-right">{{coin.volume_usd_24 | lgNumPipe}}</td>
+    <td class="text-right"
+        [class.text-danger]="coin['percent_change_' + input.currentTimeFrame] < 0"
+        [class.text-success]="0 <= coin['percent_change_' + input.currentTimeFrame]"
+    >{{coin['percent_change_' + input.currentTimeFrame] | number}} %
+    </td>
+  </tr>
+  </tbody>
+</table>
