--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,1 +1,6 @@
-<div id="pie-chart"></div>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">$ by Coin</h5>
+    <div id="pie-chart"></div>
+  </div>
+</div>
