--- a/src/app/pages/portfolio-page/portfolio-page.component.html
+++ b/src/app/pages/portfolio-page/portfolio-page.component.html
@@ -1,30 +1,36 @@
-<div class="container-fluid">
-  <nav class="my-3">
-    <ul class="nav d-flex justify-content-center align-items-center">
+<main class="bg-light">
+  <div class="container-fluid">
+    <router-outlet></router-outlet>
+    <nav class="py-3">
+      <div class="card">
+        <div class="card-body">
+          <ul class="nav d-inline-flex justify-content-center align-items-center">
 
-      <li class="nav-item px-1">
-        <a routerLink="/portfolio/add" routerLinkActive="active" class="nav-link">
-          <i class="fas fa-plus"></i>
-          Add Coin</a>
-      </li>
+            <li class="nav-item px-1">
+              <a routerLink="/portfolio/add" routerLinkActive="active" class="nav-link">
+                <i class="fas fa-plus"></i>
+                Add Coin</a>
+            </li>
 
-      <li class="nav-item px-1">
-        <a routerLink="/portfolio/edit" class="nav-link" routerLinkActive="active">
-          <i class="fas fa-minus"></i>
-          Edit Portfolio</a>
-      </li>
+            <li class="nav-item px-1">
+              <a routerLink="/portfolio/edit" class="nav-link" routerLinkActive="active">
+                <i class="fas fa-minus"></i>
+                Edit Portfolio</a>
+            </li>
 
-      <li class="nav-item px-1">
-        <a
-          class="btn btn-outline-primary"
-          (click)="csvDownloadService.handleDownload()">
-          <i class="fas fa-download"></i>
-          Download
-        </a>
+            <li class="nav-item px-1">
+              <a
+                class="btn btn-outline-primary"
+                (click)="csvDownloadService.handleDownload()">
+                <i class="fas fa-download"></i>
+                Download
+              </a>
 
-      </li>
+            </li>
 
-    </ul>
-  </nav>
-  <router-outlet></router-outlet>
-</div>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+</main>
