--- a/src/app/components/market-table/market-table.component.html
+++ b/src/app/components/market-table/market-table.component.html
@@ -1,69 +1,49 @@
-<table class="table">
-  <thead>
-  <tr>
-    <th
-      (click)="handleNewSort('rank')"
-      class="text-capitalize text-left"
-    >
-      name
-    </th>
-    <th class="text-right"
-        (click)="handleNewSort('price_usd')"
-    >Price (USD)
-    </th>
+<div>
 
-    <th class="text-right"
-        (click)="handleNewSort('volume_usd_24')"
-    >Volume
-    </th>
-    <th class="text-right"
-    >
-      <form>
-        <select
-          title="timeframe"
-          (change)="setTimeFrame(input.currentTimeFrame)"
-          type="number"
-          id="currentTimeFrame"
-          [(ngModel)]="input.currentTimeFrame"
-          #currentTimeFrame="ngModel"
-          name="currentTimeFrame"
-          class="form-control-sm"
-        >
-          <option value="1h">1 hr %</option>
-          <option value="24h">24 hr %</option>
-          <option value="7d">7 d %</option>
-        </select>
-      </form>
-      <div (click)="handleNewSort('percent_change_' + input.currentTimeFrame)">
-        sort
-      </div>
-    </th>
 
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let coin of data$ | async">
-    <td>
-      <a
-        [style.color]="portfolioService.colors[coin.symbol.toLowerCase()]"
-        href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
-        {{coin.rank}}
-        {{' '}}
-        <span
-          [class]="'icon icon-' + coin.symbol.toLowerCase()"></span>
-        {{coin.id}}
-        <small>
-          [{{coin.symbol | uppercase}}]
-        </small>
-      </a>
-    </td>
-    <td class="text-right">{{coin.price_usd | currency}}</td>
-    <td class="text-right">{{coin.volume_usd_24 | lgNumPipe}}</td>
-    <td class="text-right"
-        [class.text-danger]="coin['percent_change_' + input.currentTimeFrame] < 0"
-        [class.text-success]="0 <= coin['percent_change_' + input.currentTimeFrame]"
-    >{{coin['percent_change_' + input.currentTimeFrame] | number}} %
-    </td>
-  </tr>
-  </tbody>
-</table>
+  <ngx-datatable
+    [rows]="data$ | async"
+    class="material striped"
+    [loadingIndicator]="loading"
+    [limit]="15"
+    [summaryRow]="true"
+    [summaryPosition]="'bottom'"
+    [columnMode]="'force'"
+    [headerHeight]="50"
+    [footerHeight]="50"
+    [rowHeight]="'auto'"
+  >
+    <ngx-datatable-column prop="symbol" name="Asset">
+      <ng-template let-value="value" ngx-datatable-cell-template let-row="row">
+        <a href="https://coinmarketcap.com/currencies/{{row.id}}" target="_blank" rel="noopener">
+          <h4><app-coin-icon [symbol]="value.toLowerCase()"></app-coin-icon></h4>
+        </a>
+      </ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column prop="price_usd" cellClass="mono text-right" headerClass="text-right" name="Price">
+      <ng-template let-value="value" ngx-datatable-cell-template let-row="row">
+        {{value | currency}}
+        <div *ngIf="row.symbol.toLowerCase() !== 'btc'">
+          {{row.price_btc | number}} btc
+        </div>
+      </ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column prop="volume_usd_24" cellClass="mono text-right" headerClass="text-right" name="Volume (24h)">
+      <ng-template let-value="value" ngx-datatable-cell-template >
+        {{value | lgNumPipe}}
+      </ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column prop="percent_change_24h" [cellClass]="getKlass" headerClass="text-right" name="% Change 24h">
+      <ng-template let-value="value" ngx-datatable-cell-template>
+        {{value | number}}%
+      </ng-template>
+    </ngx-datatable-column>
+
+
+  </ngx-datatable>
+
+</div>
+
